# Lab-Gateway

./: .env  .env.example  .env.full  .env.lite  .gitattributes  .gitignore  .gitmodules  .luacov  .luarc.json  FULL-VERSION.md  LITE-VERSION.md  LOGGING.md  README-Full.md  README.md  SUMMARY.md  docker-compose.router.yml  docker-compose.yml  flake.nix  selfsigned-refresh.sh  setup.bat  setup.sh  update-auth-service.bat  update-auth-service.sh  update-blockchain-services.bat  update-blockchain-services.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: test_summary.py
.github/workflows/: gateway-tests.yml  nix-integration.yml  release.yml  security.yml
auth-service/: Dockerfile  pom.xml  readme.txt
auth-service/sql/: init-auth-db.sql
basyx-mongo/: init-user.js
certbot/: README.md
configuring-lab-connections/: guacamole-connections.md
dev/: AUTH_SERVICE_DASHBOARD_ROADMAP.md  DECENTRALIZED_FEATURES_ROADMAP.md  DOCKER_DEPLOYMENT_GUIDE.md  LAB_MANAGER_DASHBOARD_ROADMAP.md  MCP_AHK_IMPROVEMENTS.md  MEJORAS_POR_IMPLEMENTAR.md  SECURITY_HARDENING.md  SMART_CONTRACT_REGISTRY_SPEC.md
docs/: DOCUMENTATION_AUDIT.md  MOU_DELIVERABLES.md  README.md  aas-support.md  deployment-architectures.md  fmi-fmu-support.md  guacamole-session-policy.md
docs/configuring-lab-connections/: guacamole-connections.md
docs/edugain/: EDUGAIN_INTEGRATION_EN.md  INTEGRACION_EDUGAIN_ES.md  edugain-federacion.md  edugain-federation.md
docs/install/: GUIA_INSTALACION_ES.md  INSTALLATION_GUIDE_EN.md  instalar-compose-manual.md  instalar-nixos.md  instalar-setup-script.md  install-manual-compose.md  install-nixos.md  install-setup-script.md
docs/pilots/: PARTNER_PILOT_REPORT_TEMPLATE.md  PILOT_RUNBOOK.md  UNED_PILOT_REPORT_TEMPLATE.md
docs/reference/: configuration.md  operations-and-health.md
docs/tutorials/: PROVIDER_TUTORIAL_EN.md  TUTORIAL_PROVEEDOR_ES.md  tutorial-first-lab-session.md  tutorial-primera-sesion-laboratorio.md
docs/workflows/: gateway-lab-station-operations.md  institutional-check-in-access-sessions.md  institutional-reservation-workflow.md  laboratory-connectivity.md
fmu-data/: BinaryClockTest.fmu  README.md
fmu-proxy-runtime/: README.md
fmu-proxy-runtime-src/: ARCHITECTURE.md  CMakeLists.txt  README.md  build-darwin64-runtime.sh  build-linux64-runtime.ps1
fmu-proxy-runtime-src/docker/: linux64-builder.Dockerfile
fmu-proxy-runtime-src/include/decentralabs_proxy/: gateway_client.hpp  json.hpp  model_description.hpp  operation_result.hpp  protocol.hpp  runtime.hpp  runtime_config.hpp  session_state.hpp  transport.hpp
fmu-proxy-runtime-src/include/fmi2/: fmi2FunctionTypes.h  fmi2Functions.h  fmi2TypesPlatform.h
fmu-proxy-runtime-src/include/fmi3/: fmi3Functions.h
fmu-proxy-runtime-src/src/: fmi2_exports.cpp  fmi3_exports.cpp  gateway_client.cpp  json.cpp  model_description.cpp  protocol.cpp  runtime.cpp  runtime_config.cpp  session_state.cpp  transport.cpp  transport_linux.cpp
fmu-runner/: .coveragerc  Dockerfile  README.md  aas_generator.py  auth.py  fmu_backend.py  main.py  realtime_ws.py  requirements-dev.txt  requirements.txt  station_ws_proxy.py
fmu-runner/tests/: conftest.py  test_aas_generator.py  test_auth.py  test_backend_mode_guard.py  test_dependency_upgrade_contracts.py  test_fmu_backend.py  test_main.py  test_realtime_ws.py  test_station_main.py  test_station_ws_proxy.py
guacamole/: Dockerfile  docker-entrypoint.sh  guacamole.properties
mysql/: 000-ensure-user.sh  002-labstation-ops.sql  004-auth-service-schema.sql  005-labstation-ops.sql  006-intents.sql  ensure-user-entrypoint.sh  healthcheck.sh
nix/: lab-gateway-docker.nix  nixos-components-module.nix  nixos-module.nix
nix/components/: blockchain-services.nix  guacd.nix  (+4 more)
openresty/: .luacov  Dockerfile  init-ssl.sh  lab_access.conf  nginx.conf
ops-worker/: Dockerfile  README.md  aas_generator.py  hosts.sample.json  requirements.txt  rotate_secrets.py  worker.py
scripts/: Issue-LiteTrustBundle.ps1  Migrate-SamlEnv.ps1  Sync-ComposeSecrets.ps1  issue-lite-trust-bundle.sh  migrate-saml-env.py  sync-compose-secrets.sh
web/: admin-login.html  index.html
(+176 files in other folders)
